# 8086

./: CMakeLists.txt  README.md
bootloader/: CMakeLists.txt  boot.asm  makefile
emulator/: CMakeLists.txt
emulator/src/: cpu.cpp  cpu.h  main.cpp
